--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "npm run generate && gh-pages -d .output/public"
+    "push": "git add . && git commit -m 'deploy' && git push origin mian",
+    "deploy": "npm run generate && npm run push && gh-pages -d .output/public"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
