--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "push": "git add . && git commit -m 'deploy' && git push origin main",
+    "push": "git add . && git commit -m 'update' && git push origin main",
     "deploy": "npm run generate && gh-pages -d .output/public"
   },
   "dependencies": {
@@ -17,21 +17,23 @@
     "axios": "^1.6.6",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
+    "nuxt": "^3.16.2",
     "pinia": "^2.1.7",
+    "vite": "^6.3.5",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@sidebase/nuxt-auth": "^0.6.1",
+    "@swc/core": "^1.11.24",
+    "esbuild": "^0.25.4",
     "gh-pages": "^6.3.0",
-    "nuxt": "^3.17.2",
-    "rimraf": "^6.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "vite-plugin-vuetify": "^2.1.0",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
     "vuetify": "^3.4.0"
   }
 }
